# yolo-experiment

./: .gitignore  Fixture Images - Sheet1.csv  PROJECT_OVERVIEW.md  download_images_from_csv.py  eyewear_detector_prompt.md
bg-removal-fast/: README.md  pyproject.toml  requirements.txt
bg-removal-fast/bg_removal_fast/: __init__.py  __main__.py  cli.py  heuristics.py  opencv_fast.py  pipeline.py  u2netp.py
bg-removal-fast/bg_removal_fast.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bg-removal-fast/scripts/: eyewear_bg_pipeline.py  setup_models.py
bg-removal-server/: main.py  requirements.txt
bg-removal-server/static/: index.html
eyewear-detector/: INTEGRATION_PROMPT.md  README.md  __init__.py  detector.py  remove_bg_rembg.py  requirements.txt
eyewear-detector/backend/: .env.example  main.py  requirements.txt
eyewear-detector/backend/adapters/: qdrant_adapter.py  vector_db_base.py
eyewear-detector/backend/models/: db.py
eyewear-detector/backend/services/: claude_detector.py  (+3 more)
eyewear-detector/components/: EyewearDetector.tsx
eyewear-detector/labeling/: export_labels.py  label_studio_config.xml  setup_label_studio.py
eyewear-detector/lib/: eyewear.ts
eyewear-detector/models/: classifier.py  product_finder.py  section_finder.py
eyewear-detector/routers/: eyewear.py
eyewear-detector/scripts/: auto_label.py  benchmark.py  bootstrap_web_dataset.py  colab_one_shot.sh  ingest.sh  retrain.sh  web_queries.txt
eyewear-detector/training/: __init__.py  train_product_finder.py  train_section_detector.py
eyewear-detector/utils/: image_utils.py  nms.py
(+5 files in other folders)
