[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bg-removal-fast"
version = "0.1.0"
description = "Fast background removal (OpenCV + U2-NetP hybrid)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.setuptools]
packages = ["bg_removal_fast"]
